save experiment results.

--- a/SynBio/notebooks/Regression_RBS_FC _CV.ipynb
+++ b/SynBio/notebooks/Regression_RBS_FC _CV.ipynb
@@ -502,7 +502,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -522,6 +522,13 @@
       "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
       "[0.27693407 0.490508   0.4382023  0.40888562 0.27201237]\n",
       "RMSE : 0.38 (+/- 0.18)\n",
+      "\n",
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=PairwiseKernel(gamma=1.0, metric=<function WD_kernel_pw at 0x7efec227e400>),\n",
+      "                         n_restarts_optimizer=0, normalize_y=False,\n",
+      "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
+      "[0.38145735 0.51714079 0.74856201 0.45478084 0.51289718]\n",
+      "RMSE : 0.52 (+/- 0.25)\n",
       "\n"
      ]
     }
