--- a/SynBio/notebooks/Regression_RBS_FC.ipynb
+++ b/SynBio/notebooks/Regression_RBS_FC.ipynb
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -547,6 +547,13 @@
       "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
       "Train RMSE:  0.21266976127216966\n",
       "Test RMSE:  0.3814573512700387\n",
+      "\n",
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=PairwiseKernel(gamma=1.0, metric=<function WD_shift_kernel_pw at 0x7f6d575b3510>),\n",
+      "                         n_restarts_optimizer=0, normalize_y=False,\n",
+      "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
+      "Train RMSE:  0.2126702866759093\n",
+      "Test RMSE:  0.38145681868250686\n",
       "\n"
      ]
     }
