--- a/SynBio/notebooks/Regression_RBS_TIR.ipynb
+++ b/SynBio/notebooks/Regression_RBS_TIR.ipynb
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +347,12 @@
       "            kernel_params=None)\n",
       "Train RMSE:  0.15982761197484005\n",
       "Test RMSE:  0.22877782480605377\n",
+      "\n",
+      "Model:  KernelRidge(alpha=1, coef0=1, degree=3, gamma=None,\n",
+      "            kernel=<function WD_shift_kernel_pw at 0x7fa1bb0d0510>,\n",
+      "            kernel_params=None)\n",
+      "Train RMSE:  0.15995995822175776\n",
+      "Test RMSE:  0.22861818682500087\n",
       "\n"
      ]
     }
@@ -371,9 +377,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=DotProduct(sigma_0=1), n_restarts_optimizer=0,\n",
+      "                         normalize_y=False, optimizer='fmin_l_bfgs_b',\n",
+      "                         random_state=None)\n",
+      "Train RMSE:  0.17367784854452128\n",
+      "Test RMSE:  0.24127509525526664\n"
+     ]
+    }
+   ],
    "source": [
     "# # baseline: onehot embedding with DotProduct Kernel \n",
     "reg = Regression(GaussianProcessRegressor(kernel = DotProduct()), data, 'onehot')\n",
@@ -383,9 +402,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=DotProduct(sigma_0=1), n_restarts_optimizer=0,\n",
+      "                         normalize_y=False, optimizer='fmin_l_bfgs_b',\n",
+      "                         random_state=None)\n",
+      "Train RMSE:  0.20320231846722717\n",
+      "Test RMSE:  0.2525813658140823\n"
+     ]
+    }
+   ],
    "source": [
     "# kmer embedding (l = 3)\n",
     "reg = Regression(GaussianProcessRegressor(kernel = DotProduct()), data, 'kmer')\n",
@@ -397,7 +429,28 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=PairwiseKernel(gamma=1.0, metric=<function spectrum_kernel_pw at 0x7fa1bb0d0378>),\n",
+      "                         n_restarts_optimizer=0, normalize_y=False,\n",
+      "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
+      "Train RMSE:  0.16566206003872438\n",
+      "Test RMSE:  0.28687678445019804\n",
+      "\n",
+      "Model:  GaussianProcessRegressor(alpha=1e-10, copy_X_train=True,\n",
+      "                         kernel=PairwiseKernel(gamma=1.0, metric=<function mixed_spectrum_kernel_pw at 0x7fa1bb0d0400>),\n",
+      "                         n_restarts_optimizer=0, normalize_y=False,\n",
+      "                         optimizer='fmin_l_bfgs_b', random_state=None)\n",
+      "Train RMSE:  0.16565445563296496\n",
+      "Test RMSE:  0.2868699337348291\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Show string kernel performance (l = 3)\n",
     "# label embedding \n",
