start to do plots, done with main func of frugal_vs_sgd

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -20,14 +20,12 @@
     "from nbformat import read\n",
     "from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
+    "\n",
     "import math\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.colors as colors\n",
-    "import matplotlib.cm as cmx\n",
-    "import os\n",
-    "import matplotlib.colors as mc\n",
-    "import colorsys"
+    "import matplotlib.cm as cmx"
    ]
   },
   {
@@ -51,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -159,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -245,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -256,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +286,7 @@
     "# # proc1 = get_procs(dataset, 'const', tau_vals)\n",
     "# ## res1 = get_res(proc1)\n",
     "# # proc2 = get_procs(dataset, 'frugal', tau_vals)\n",
-    "# # plt.plot(proc1.T)\n",
+    "# # plt.plot(proc1.T)ad\n",
     "# # plt.plot(proc2.T)\n",
     "# # plt.show()\n",
     "\n",
@@ -300,12 +298,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_normalized_e(true, batches, est):\n",
+    "    upper = est - batches\n",
+    "    bottom = true - batches\n",
+    "    return abs(upper/bottom)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
     "def quantile_sgd_compare(distro_lst, datasize_lst, stepsize_lst, \n",
-    "                         g_test=False, s_test=False, tau_lst=tau_vals):\n",
+    "                         g_test=False, s_test=False, tau_lst=tau_vals, \n",
+    "                        chart_lst = []):\n",
     "    \n",
     "    if g_test and s_test: raise Exception(\"g_test and s_test can't both be true\")\n",
     "    \n",
@@ -323,7 +348,7 @@
     "        # generate all the data\n",
     "        distro, datasize, stepsize = setting[0], int(setting[1]), setting[2]\n",
     "        q_true = get_q_true(distro, tau_lst)\n",
-    "        print (q_true)\n",
+    "#         print (q_true)\n",
     "        if not is_stepsize:\n",
     "            dataset = get_dataset(distro, datasize, g_test)\n",
     "            q_batches = get_q_batches(dataset, tau_lst)\n",
@@ -334,11 +359,49 @@
     "                shuffled_dt[i] = dataset\n",
     "            dataset = shuffled_dt\n",
     "        q_est_res, q_est_proc = get_q_ests(dataset, stepsize, tau_lst)\n",
+    "        print (q_est_proc)\n",
+    "        E = get_normalized_e(q_true, q_batches, q_est_res)\n",
+    "        print(E)\n",
     "        \n",
     "#         # generate charts and tables?\n",
-    "#         name = get_name(distro, datasize, stepsize, tau_list, g_test, s_test)\n",
+    "#         name = naming(distro, datasize, stepsize, tau_list, g_test, s_test)\n",
     "#         charts = get_charts(tau_lst, q_batches, q_sgd_res, q_sgd_proc, name)\n",
     "# #         tables = get_tables(tau_lst, q_batches, q_sgd_res, q_sgd_proc, name)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def sgd_frugal_compare(distro_lst, datasize, tau_lst=tau_vals):\n",
+    "    #distro changes, use the biggest datasize, do not shuffle\n",
+    "#     fig, (ax1,ax2) = plt.subplots(1,2)\n",
+    "#     fig.set_size_inches(12, 7)\n",
+    "    for distro in distro_lst:\n",
+    "        fig, (ax1,ax2) = plt.subplots(1,2)\n",
+    "        fig.set_size_inches(16, 4)\n",
+    "        \n",
+    "        dataset = get_dataset(distro, datasize, False)\n",
+    "        q_batches = get_q_batches(dataset, tau_lst)\n",
+    "        \n",
+    "        sgd_res, sgd_proc = get_q_ests(dataset, 'const', tau_lst)\n",
+    "        ax1.plot(sgd_proc.T, label='sgd')\n",
+    "        \n",
+    "        N_frugal = 10\n",
+    "        frugal_res = np.zeros((N_frugal, len(tau_lst)))\n",
+    "        frugal_proc = np.zeros((N_frugal, len(tau_lst), datasize))\n",
+    "        for i in range(N_frugal):\n",
+    "            frugal_res[i], frugal_proc[i] = get_q_ests(dataset, 'frugal', tau_lst)\n",
+    "            for proc in frugal_proc[i]:\n",
+    "                ax2.plot(proc, label = (str(tau_lst[i])+'quantile') if i==0 else '')\n",
+    "        ax2.legend()\n",
+    "        ax1.set_title('sgd for '+distro)\n",
+    "        ax2.set_title('frugal for '+distro)\n",
+    "        #print chart for everyone\n",
+    "        \n",
+    "# sgd_frugal_compare(distros, 1000)"
    ]
   },
   {
@@ -362,28 +425,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 187,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['mix' '100' '2/sqrt_k']\n",
-      " ['mix' '150' '2/sqrt_k']\n",
-      " ['mix' '200' '2/sqrt_k']]\n",
-      "[-80.28496182 -29.02324254  -0.36011575  36.69268923 120.7676231 ]\n",
-      "[-80.28496182 -29.02324254  -0.36011575  36.69268923 120.7676231 ]\n",
-      "[-80.28496182 -29.02324254  -0.36011575  36.69268923 120.7676231 ]\n"
+      "[['mix' '10' 'const']\n",
+      " ['mix' '100' 'const']\n",
+      " ['mix' '1000' 'const']]\n",
+      "[[-9.0000000e-01 -8.0000000e-01 -7.0000000e-01 -6.0000000e-01\n",
+      "  -5.0000000e-01 -1.4000000e+00 -1.3000000e+00 -2.2000000e+00\n",
+      "  -2.1000000e+00 -2.0000000e+00]\n",
+      " [-2.7000000e+00 -2.4000000e+00 -2.1000000e+00 -1.8000000e+00\n",
+      "  -1.5000000e+00 -2.2000000e+00 -1.9000000e+00 -2.6000000e+00\n",
+      "  -2.3000000e+00 -2.0000000e+00]\n",
+      " [-2.5000000e+00 -2.0000000e+00 -1.5000000e+00 -1.0000000e+00\n",
+      "  -5.0000000e-01 -1.0000000e+00 -5.0000000e-01 -1.0000000e+00\n",
+      "  -5.0000000e-01 -4.4408921e-16]\n",
+      " [-1.0000000e-01  8.0000000e-01  1.7000000e+00  2.6000000e+00\n",
+      "   2.5000000e+00  2.4000000e+00  2.3000000e+00  2.2000000e+00\n",
+      "   3.1000000e+00  3.0000000e+00]\n",
+      " [ 2.9900000e+00  3.9800000e+00  4.9700000e+00  4.9600000e+00\n",
+      "   4.9500000e+00  4.9400000e+00  4.9300000e+00  4.9200000e+00\n",
+      "   5.9100000e+00  5.9000000e+00]]\n",
+      "[7.80547244 1.80448886 0.76455743 0.54355112 0.10394113]\n",
+      "[[ -0.9   -0.8   -0.7   -1.6   -2.5   -2.4   -2.3   -2.2   -2.1   -2.\n",
+      "   -2.9   -2.8   -3.7   -3.6   -3.5   -4.4   -5.3   -6.2   -7.1   -7.\n",
+      "   -7.9   -8.8   -9.7   -9.6   -9.5   -9.4   -9.3   -9.2  -10.1  -11.\n",
+      "  -10.9  -10.8  -11.7  -11.6  -11.5  -11.4  -11.3  -12.2  -13.1  -13.\n",
+      "  -12.9  -12.8  -12.7  -12.6  -13.5  -13.4  -13.3  -13.2  -14.1  -14.\n",
+      "  -13.9  -14.8  -14.7  -15.6  -16.5  -17.4  -17.3  -17.2  -17.1  -18.\n",
+      "  -17.9  -17.8  -17.7  -18.6  -18.5  -19.4  -20.3  -21.2  -21.1  -22.\n",
+      "  -21.9  -22.8  -23.7  -24.6  -25.5  -25.4  -26.3  -26.2  -26.1  -26.\n",
+      "  -25.9  -25.8  -25.7  -25.6  -25.5  -25.4  -25.3  -25.2  -25.1  -25.\n",
+      "  -24.9  -24.8  -25.7  -25.6  -25.5  -26.4  -26.3  -26.2  -26.1  -26.  ]\n",
+      " [-25.7  -25.4  -25.1  -25.8  -26.5  -26.2  -25.9  -25.6  -25.3  -25.\n",
+      "  -24.7  -24.4  -25.1  -24.8  -24.5  -25.2  -25.9  -25.6  -26.3  -26.\n",
+      "  -26.7  -27.4  -28.1  -27.8  -27.5  -27.2  -26.9  -26.6  -27.3  -28.\n",
+      "  -27.7  -27.4  -28.1  -27.8  -27.5  -27.2  -26.9  -27.6  -28.3  -28.\n",
+      "  -27.7  -27.4  -27.1  -26.8  -27.5  -27.2  -26.9  -26.6  -27.3  -27.\n",
+      "  -26.7  -27.4  -27.1  -27.8  -28.5  -29.2  -28.9  -28.6  -28.3  -29.\n",
+      "  -28.7  -28.4  -28.1  -28.8  -28.5  -29.2  -29.9  -30.6  -30.3  -31.\n",
+      "  -30.7  -30.4  -31.1  -31.8  -32.5  -32.2  -32.9  -32.6  -32.3  -32.\n",
+      "  -31.7  -31.4  -31.1  -30.8  -30.5  -30.2  -29.9  -29.6  -29.3  -29.\n",
+      "  -28.7  -28.4  -29.1  -28.8  -28.5  -29.2  -28.9  -28.6  -28.3  -28.  ]\n",
+      " [-27.5  -27.   -26.5  -27.   -27.5  -27.   -26.5  -26.   -25.5  -25.\n",
+      "  -24.5  -24.   -24.5  -24.   -23.5  -24.   -24.5  -25.   -25.5  -25.\n",
+      "  -25.5  -26.   -26.5  -26.   -25.5  -25.   -24.5  -24.   -24.5  -25.\n",
+      "  -24.5  -24.   -24.5  -24.   -23.5  -23.   -22.5  -23.   -23.5  -23.\n",
+      "  -22.5  -22.   -21.5  -21.   -21.5  -21.   -20.5  -20.   -20.5  -20.\n",
+      "  -19.5  -20.   -19.5  -20.   -20.5  -21.   -20.5  -20.   -19.5  -20.\n",
+      "  -19.5  -19.   -18.5  -19.   -18.5  -19.   -19.5  -20.   -19.5  -20.\n",
+      "  -19.5  -20.   -20.5  -21.   -21.5  -21.   -21.5  -21.   -20.5  -20.\n",
+      "  -19.5  -19.   -18.5  -18.   -17.5  -17.   -16.5  -16.   -15.5  -15.\n",
+      "  -14.5  -14.   -14.5  -14.   -13.5  -14.   -13.5  -13.   -12.5  -12.  ]\n",
+      " [-11.1  -10.2   -9.3   -9.4   -9.5   -8.6   -7.7   -6.8   -5.9   -5.\n",
+      "   -4.1   -3.2   -3.3   -2.4   -1.5   -1.6   -1.7   -1.8   -1.9   -1.\n",
+      "   -1.1   -1.2   -1.3   -0.4    0.5    1.4    2.3    2.2    2.1    2.\n",
+      "    1.9    1.8    1.7    1.6    1.5    1.4    2.3    2.2    2.1    2.\n",
+      "    1.9    2.8    2.7    2.6    2.5    2.4    2.3    2.2    2.1    2.\n",
+      "    1.9    1.8    2.7    2.6    2.5    2.4    3.3    3.2    3.1    3.\n",
+      "    2.9    3.8    3.7    3.6    4.5    4.4    4.3    4.2    4.1    4.\n",
+      "    3.9    3.8    3.7    3.6    3.5    3.4    3.3    4.2    4.1    5.\n",
+      "    5.9    5.8    5.7    6.6    7.5    7.4    7.3    8.2    8.1    8.\n",
+      "    7.9    8.8    8.7    8.6    9.5    9.4    9.3    9.2    9.1    9.  ]\n",
+      " [  8.99   8.98   8.97   8.96   8.95   8.94   9.93   9.92   9.91  10.9\n",
+      "   10.89  10.88  10.87  11.86  11.85  11.84  11.83  11.82  11.81  11.8\n",
+      "   11.79  11.78  11.77  12.76  13.75  13.74  14.73  14.72  14.71  14.7\n",
+      "   14.69  14.68  14.67  14.66  14.65  14.64  15.63  15.62  15.61  15.6\n",
+      "   15.59  16.58  16.57  16.56  16.55  16.54  16.53  16.52  16.51  16.5\n",
+      "   16.49  16.48  16.47  16.46  16.45  16.44  16.43  16.42  16.41  16.4\n",
+      "   16.39  17.38  17.37  17.36  17.35  17.34  17.33  17.32  17.31  17.3\n",
+      "   17.29  17.28  17.27  17.26  17.25  17.24  17.23  17.22  17.21  18.2\n",
+      "   18.19  18.18  18.17  19.16  20.15  20.14  20.13  21.12  21.11  21.1\n",
+      "   21.09  22.08  22.07  22.06  23.05  23.04  23.03  23.02  23.01  23.  ]]\n",
+      "[16.19555521  1.03376687 14.10577213  5.25154177  1.12352875]\n",
+      "[[  0.1   -0.8   -1.7  ... -81.2  -81.1  -81.  ]\n",
+      " [-80.7  -80.4  -80.1  ... -46.6  -46.3  -47.  ]\n",
+      " [-46.5  -46.   -45.5  ...  -1.    -0.5   -1.  ]\n",
+      " [ -0.1   -0.2   -0.3  ...  34.2   34.1   34.  ]\n",
+      " [ 33.99  33.98  33.97 ...  82.02  82.01  82.  ]]\n",
+      "[ 0.56546163  1.59990533 23.27672407  2.00646433  6.20105558]\n"
      ]
     }
    ],
    "source": [
     "quantile_sgd_compare(distro_lst=['mix'], \n",
-    "                     datasize_lst=[100, 150, 200], \n",
-    "                     stepsize_lst=['2/sqrt_k'], \n",
+    "                     datasize_lst=[10, 100, 1000], \n",
+    "                     stepsize_lst=['const'], \n",
     "                     g_test=False,\n",
-    "                     s_test=True)"
+    "                     s_test=False)"
    ]
   },
   {
