try to plot Frugal_vs_SGD

--- a/QuantEst/sgd_est_experiment/comparison_image_generation.ipynb
+++ b/QuantEst/sgd_est_experiment/comparison_image_generation.ipynb
@@ -610,7 +610,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# def lighten_color(color, amount=0.5):\n",
+    "def lighten_color(color, amount=0.5):\n",
     "    \"\"\"\n",
     "    Lightens the given color by multiplying (1-luminosity) by the given amount.\n",
     "    Input can be matplotlib color string, hex string, or RGB tuple.\n",
